feat: permit permission id or name for request payload + validator implementation
